MDEV-6134 SUBSTRING_INDEX returns wrong result for 8bit character sets when delimiter is not found