sql/item_strfunc.cc
@@ -1404,6 +1404,8 @@ String *Item_func_substr_index::val_str(String *str)
 	  break;
 	}
       }
+      if (count)
+        return res;                     // Didn't find, return org string
     }
   }
   /*
